Update change to parse args for in/output dir and fix txt files to have object id

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,12 @@
-./outputMLFilesDarknet\Debug\
-./.vs/
+outputMLFilesDarknet/Debug/
+outputMLFilesDarknet/x64/
+x64/
+**/.vs/**
+# Compiled Files
+*.obj
+*.ilk
+*.xdc
+*.pdb
+*.idb
+*.db
+*.VC.db*
